DT-1117  Fixes broken layout on UI pagination

--- a/src/renderer/features/workbench/pages/detected/pages/ComponentDetail/ComponentDetail.scss
+++ b/src/renderer/features/workbench/pages/detected/pages/ComponentDetail/ComponentDetail.scss
@@ -24,6 +24,7 @@
     display: flex;
     min-height: calc(100% - 300px);
     align-items: flex-start;
+    flex-wrap: wrap;
 
     .loader,  .file-group-container .loader {
       justify-self: center;
@@ -94,6 +95,8 @@
 
     .group {
       margin-bottom: 12px;
+      display: flex;
+      flex-wrap: wrap;
     }
 
     .component {
